# aiproj

./: .gitignore  AGENTS.md  README.md  START_HERE.md  pyproject.toml  requirements.txt  文档分流说明.md  版本标记说明.md  解释代码格式说明
b/: README.md
c/: README.md
d/: README.md
data/: eval_prompts.json  sample_zh.txt  standard_zh_eval_prompts.json  templated_corpus_v1157.txt
docs/: README.md  aiproj-track-a0-census.md  aiproj-track-a1-static-analysis.md  aiproj-track-a2-coverage.md  aiproj-track-a3-artifact-schema-guard.md  aiproj-track-a3-honest-measurement.md  aiproj-track-a4-code-health.md  aiproj-track-final-evidence.md  architecture-map.md  archive-runs-inventory.md  artifact-map.md  artifact-schema-guard-registry.json  ci-execution-economy.md  deep-maintenance-v1268-v1272-closeout.md  elegance-closeout-v1274.md  elegance-hotspot-program-aiproj.md  engineering-workflow.md  model-capability-cadence.md  model-capability-honest-measurement-policy.md  model-capability-honest-measurement-registry.json  model-training.md  module-inventory.md  no-promotion-boundary.md  normalization-guard.md  normalization-roadmap.md  overview.md  production-excellence-aiproj-brief.md  public-api.md  publication-receipt-template.md  publication-receipts.md  readme-exhibition-brief.md  script-entrypoints.md  stage2-aiproj-operational-brief.md  static-analysis.md  v1275-fourier-ticket-brief.md  v1276-superposition-brief.md  v1277-capacity-squeeze-brief.md  v1279-grok-speed-brief.md  v1280-init-rescue-brief.md  v1281-norm-vs-step-brief.md  (+9 more)
e/: README.md
f/: README.md
scripts/: _bootstrap.py  (+763 more)
(+12024 files in other folders)
