[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "minigpt-from-scratch"
version = "0.1.0"
description = "A tiny character-level GPT project for understanding Transformer language models."
requires-python = ">=3.11"
dependencies = [
  "torch>=2.6",
  "numpy>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
