[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "minigpt-from-scratch"
version = "0.1.0"
description = "A tiny character-level GPT project for understanding Transformer language models."
requires-python = ">=3.11"
dependencies = [
  "torch>=2.6",
  "numpy>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-p", "no:faker"]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
strict = true
warn_unused_configs = true
show_error_codes = true
pretty = false
explicit_package_bases = true
follow_imports = "skip"
